# NoGL

./: .gitignore  CMakeLists.txt  main.c
include/: NoGL.h  NoUtils.h
src/: NoGL.c  NoUtils.c
